<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_todo_background"
    >


    <!-- Search Box at the top -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search"
        android:layout_margin="16dp"
        android:id="@+id/searchTextInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sort Button -->



    <!-- RecyclerView positioned below the search bar -->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchTextInput"
        android:layout_margin="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/buttonContainer"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_below="@id/searchTextInput" />


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <!-- Sort Button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/sortButton"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sort"
            style="@style/ButtonStyle"
            app:icon="@drawable/sort_image"
            android:layout_marginEnd="50dp"/>

        <!-- New Task Button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/newTaskBtn"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="New Task"
            style="@style/ButtonStyle"
            app:icon="@drawable/add_vector_asset" />
    </LinearLayout>


</RelativeLayout>
