...
                android:text="Task Description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskName"
                android:layout_marginTop="5dp"/>

            <ImageButton
                android:id="@+id/infoButton"
                style="@style/ImageButtonStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/info_image" />

...
