...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditFragment"
    android:orientation="vertical"
    android:id="@+id/taskEditFragment">

    <!-- Title for the fragment, can be modified -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
...
        style="@style/ButtonStyle" />

    <!-- Delete Task Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteTaskButton"
        android:text="Delete Task"
        android:textColor="@color/red"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        style="@style/ButtonStyle" />

...
